...
    const val COINS_VALUE_TEXT = "COINS$POSTFIX_VALUE$POSTFIX_TEXT"
    const val CURRENCY_VALUE_TEXT = "CURRENCY$POSTFIX_VALUE$POSTFIX_TEXT"
    const val LANGUAGE_VALUE_TEXT = "LANGUAGE$POSTFIX_VALUE$POSTFIX_TEXT"
    const val PAYMENT_ID_LABEL_TEXT = "PAYMENT_ID$POSTFIX_LABEL$POSTFIX_TEXT"
    const val PAYMENT_ID_VALUE_TEXT = "PAYMENT_ID$POSTFIX_VALUE$POSTFIX_TEXT"
    const val PAYMENT_DESCRIPTION_LABEL_TEXT = "PAYMENT_DESCRIPTION$POSTFIX_LABEL$POSTFIX_TEXT"
    const val PAYMENT_DESCRIPTION_VALUE_TEXT = "PAYMENT_DESCRIPTION$POSTFIX_VALUE$POSTFIX_TEXT"
    const val PAYMENT_DETAILS_LABEL_TEXT = "PAYMENT_DETAILS$POSTFIX_LABEL$POSTFIX_TEXT"
    const val ADDRESS_LABEL_TEXT = "ADDRESS$POSTFIX_LABEL$POSTFIX_TEXT"
    const val ADDRESS_VALUE_TEXT = "ADDRESS$POSTFIX_VALUE$POSTFIX_TEXT"
    const val RECURRING_AGREEMENTS_REGULAR_LABEL_TEXT =
        "RECURRING_AGREEMENTS$POSTFIX_REGULAR$POSTFIX_LABEL$POSTFIX_TEXT"
    const val RECURRING_AGREEMENTS_EXPRESS_LABEL_TEXT =
...
    const val CARDHOLDER_TEXT_FIELD = "CARDHOLDER$POSTFIX_TEXT_FIELD"
    const val PAN_TEXT_FIELD = "PAN$POSTFIX_TEXT_FIELD"

    //Buttons
    const val SCREEN_CLOSE_BUTTON = "SCREEN_CLOSE$POSTFIX_BUTTON"
    const val SCREEN_BACK_BUTTON = "SCREEN_BACK$POSTFIX_BUTTON"
    const val PAYMENT_DETAILS_BUTTON = "PAYMENT_DETAILS$POSTFIX_BUTTON"
    const val SAVE_BUTTON = "SAVE$POSTFIX_BUTTON"
    const val AUTHORIZE_BUTTON = "AUTHORIZE$POSTFIX_BUTTON"
    const val PAY_BUTTON = "PAY$POSTFIX_BUTTON"
    const val PROCEED_BUTTON = "PROCEED$POSTFIX_BUTTON"
    const val CONFIRMATION_BUTTON = "CONFIRMATION$POSTFIX_BUTTON"
    const val CLOSE_BUTTON = "CLOSE$POSTFIX_BUTTON"
...
