...
                builder
                    .setMessage("Your payment is successful")
                    .setPositiveButton(R.string.ok_label) { _: DialogInterface?, _: Int -> }
            }
            PaymentSDK.RESULT_CANCELLED -> {
                builder
                    .setMessage("You cancelled the payment")
                    .setPositiveButton(R.string.ok_label) { _: DialogInterface?, _: Int -> }
            }
            PaymentSDK.RESULT_DECLINE -> {
                builder
                    .setMessage("Your payment was declined")
                    .setPositiveButton(R.string.ok_label) { _: DialogInterface?, _: Int -> }
...
