...
        label = { Text(text = "Payment Currency") }
    )
    Spacer(modifier = Modifier.size(padding))
    OutlinedTextField(
        modifier = Modifier
            .fillMaxWidth()
            .testTag("paymentDescriptionTextField"),
        value = paymentData.paymentDescription ?: "",
        onValueChange = { changingString ->
            intentListener(
                MainViewIntents.ChangeField(
                    paymentData = paymentData.copy(
                        paymentDescription = changingString.ifBlank { null }
...
