...


        Spacer(Modifier.size(padding))

        SDKButton(
            modifier = Modifier
                .testTag("saleButton"),
            text = "Sale",
            listener = {
                intentListener(MainViewIntents.Sale)
            }
        )

...
